add section-1 and section-2

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Travel Clerk |Home</title>
 </head>
 <body>
-    
+
+    <section class="section-1 c-blue" id="section-1">
+        <h1>Travel Clerk</h1>
+    </section>
+
+    <section class="section-2">
+        <h2 class="c-blue">About us</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores atque amet esse totam praesentium repudiandae aperiam. Quas, tempora, praesentium sunt deserunt voluptatibus natus magni suscipit optio veritatis sequi possimus vero.</p>
+    </section>
 </body>
 </html>
