first version of complete project

--- a/index.html
+++ b/index.html
@@ -3,17 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/styles.css" type="text/css">
     <title>Travel Clerk |Home</title>
 </head>
-<body>
 
+<body>
     <section class="section-1 c-blue" id="section-1">
         <h1>Travel Clerk</h1>
+        <div class="intro">
+          <img src="./images/computer-image.jpeg" alt="">
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus, porro!</p>
+        </div>
     </section>
 
     <section class="section-2">
         <h2 class="c-blue">About us</h2>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores atque amet esse totam praesentium repudiandae aperiam. Quas, tempora, praesentium sunt deserunt voluptatibus natus magni suscipit optio veritatis sequi possimus vero.</p>
+    </section>
+
+    <section class="section-3">
+        <h2 class="c-blue">Background</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores atque amet esse totam praesentium repudiandae aperiam. Quas, tempora, praesentium sunt deserunt voluptatibus natus magni suscipit optio veritatis sequi possimus vero.</p>
+    </section>
+
+    <section class="section-4">
+        <h2 class="c-blue">Projects</h2>
+        <div class="projects">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores atque amet esse totam praesentium repudiandae aperiam. Quas, tempora, praesentium sunt deserunt voluptatibus natus magni suscipit optio veritatis sequi possimus vero.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores atque amet esse totam praesentium repudiandae aperiam. Quas, tempora, praesentium sunt deserunt voluptatibus natus magni suscipit optio veritatis sequi possimus vero.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores atque amet esse totam praesentium repudiandae aperiam. Quas, tempora, praesentium sunt deserunt voluptatibus natus magni suscipit optio veritatis sequi possimus vero.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores atque amet esse totam praesentium repudiandae aperiam. Quas, tempora, praesentium sunt deserunt voluptatibus natus magni suscipit optio veritatis sequi possimus vero.</p>
+        </div>
     </section>
 </body>
 </html>
