Second commit to complete project

--- a/index.html
+++ b/index.html
@@ -8,17 +8,22 @@
 </head>
 
 <body>
-    <section class="section-1 c-blue" id="section-1">
-        <h1>Travel Clerk</h1>
+    <section class="section-1" id="section-1">
+        <h1>Mugure: Full Stack Software Developer</h1>
         <div class="intro">
-          <img src="./images/computer-image.jpeg" alt="">
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus, porro!</p>
+          <img src="../travel-clerk/images/coding-cartoon-image.jpeg">
         </div>
     </section>
 
     <section class="section-2">
-        <h2 class="c-blue">About us</h2>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores atque amet esse totam praesentium repudiandae aperiam. Quas, tempora, praesentium sunt deserunt voluptatibus natus magni suscipit optio veritatis sequi possimus vero.</p>
+        <h2 class="c-blue">About me</h2>
+        <p>
+            <ul>
+                <li><strong>Work Experience</strong>: Legal correspondence at GG & Co Advocates. This position includes but is not limited to drafting legal documents/correspondence, legal research and e-filing for State and Federal courts, maintaining electronic and paper files and maintaining attorney calendar.</li>
+                <li><strong>Post Secondary Education</strong>:My post-secondary education was in Political Science and International Relations. The courses in this program helped me to develop stronger business relationships through professional correspondence. I also learned persuasive writing and communication skills, which have proven to be incredibly helpful in different fields.</li>
+                <li><strong>Why Moringa School</strong>: Because I intend to pursue a career as a Full Stack Software Developer. I see the Moringa School's Software Development Program as the Holy Grail of education. Offering the impressive intellectual and technical resources of a prestigious university, Moringa School would provide me the confidence of knowing that I would be getting the most forward-focused education in Software Development.</li>
+            </ul>
+        </p>
     </section>
 
     <section class="section-3">
