removed background image from page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section class="section-1" id="section-1">
         <h1>Mugure: Full Stack Software Developer</h1>
         <div class="intro">
-          <img src="../travel-clerk/images/coding-cartoon-image.jpeg">
+          <!-- <img src="../travel-clerk/images/coding-cartoon-image.jpeg"> -->
         </div>
     </section>
 
