update on css and html file

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </section>
 
     <section class="section-2">
-        <h2 class="c-blue">About me</h2>
+        <h2 class="c-black">About me</h2>
         <p>
             <ul>
                 <li><strong>Work Experience</strong>: Legal correspondence at GG & Co Advocates. This position includes but is not limited to drafting legal documents/correspondence, legal research and e-filing for State and Federal courts, maintaining electronic and paper files and maintaining attorney calendar.</li>
@@ -27,8 +27,8 @@
     </section>
 
     <section class="section-3">
-        <h2 class="c-blue">Background</h2>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores atque amet esse totam praesentium repudiandae aperiam. Quas, tempora, praesentium sunt deserunt voluptatibus natus magni suscipit optio veritatis sequi possimus vero.</p>
+        <h2 class="c-blue">Fun fact</h2>
+        <p><strong>Girls who ride, are some of the most close-knit, foxy, and loyal ladies around and there’s no debating that.</strong> Back in the dark days, women weren't able to ride a motorcycle or get their license. I own multiple rides, and they aren’t just garage ornaments, either. I had to have a motorcycle. My father owned an Indian motorcycle, so he really couldn’t say anything when I wanted one of my own. Riding and music are my life, and I get to do both. Well, I guess you can say I’m lucky enough to be living the dream!.</p>
     </section>
 
     <section class="section-4">
