updates to funfacts and projects

--- a/index.html
+++ b/index.html
@@ -4,38 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css" type="text/css">
-    <title>Portfolio |Home</title>
+    
+    <title>Portfolio | Home</title>
 </head>
 
 <body>
     <section class="section-1" id="section-1">
         <h1>Mugure: Full Stack Software Developer</h1>
         <div class="intro">
-          <!-- <img src="../travel-clerk/images/coding-cartoon-image.jpeg"> -->
         </div>
     </section>
 
     <section class="section-2">
         <h2 class="c-black">About me</h2>
-        <p>
-            <ul>
-                <li><strong>Work Experience</strong>: Legal correspondence at GG & Co Advocates. This position includes but is not limited to drafting legal documents/correspondence, legal research and e-filing for State and Federal courts, maintaining electronic and paper files and maintaining attorney calendar.</li>
-                <li><strong>Post Secondary Education</strong>:My post-secondary education was in Political Science and International Relations. The courses in this program helped me to develop stronger business relationships through professional correspondence. I also learned persuasive writing and communication skills, which have proven to be incredibly helpful in different fields.</li>
-                <li><strong>Why Moringa School</strong>: Because I intend to pursue a career as a Full Stack Software Developer. I see the Moringa School's Software Development Program as the Holy Grail of education. Offering the impressive intellectual and technical resources of a prestigious university, Moringa School would provide me the confidence of knowing that I would be getting the most forward-focused education in Software Development.</li>
-            </ul>
-        </p>
+        <div class="about-me">
+                <p><strong>Work Experience</strong>: Legal correspondence at GG & Co Advocates. This position includes but is not limited to drafting legal documents/correspondence, legal research and e-filing for State and Federal courts, maintaining electronic and paper files and maintaining attorney calendar.</p>
+                <p><strong>Post Secondary Education</strong>:My post-secondary education was in Political Science and International Relations. The courses in this program helped me to develop stronger business relationships through professional correspondence. I also learned persuasive writing and communication skills, which have proven to be incredibly helpful in different fields.</p>
+                <p><strong>Why Moringa School</strong>: Because I intend to pursue a career as a Full Stack Software Developer. I see the Moringa School's Software Development Program as the Holy Grail of education. Offering the impressive intellectual and technical resources of a prestigious university, Moringa School would provide me the confidence of knowing that I would be getting the most forward-focused education in Software Development.</p>
+        </div>
+
     </section>
 
     <section class="section-3">
         <h2 class="c-blue">Fun fact</h2>
+        <div class="hobbies">
         <p><strong>Girls who ride, are some of the most close-knit, foxy, and loyal ladies around and there’s no debating that.</strong> Back in the dark days, women weren't able to ride a motorcycle or get their license. I own multiple rides, and they aren’t just garage ornaments, either. I had to have a motorcycle. My father owned an Indian motorcycle, so he really couldn’t say anything when I wanted one of my own. Riding and music are my life, and I get to do both. Well, I guess you can say I’m lucky enough to be living the dream!.</p>
+        </div>
     </section>
 
     <section class="section-4">
-        <h2 class="c-blue">Projects</h2>
+        <h2 class="c-black">Projects</h2>
         <div class="projects">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores atque amet esse totam praesentium repudiandae aperiam. Quas, tempora, praesentium sunt deserunt voluptatibus natus magni suscipit optio veritatis sequi possimus vero.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores atque amet esse totam praesentium repudiandae aperiam. Quas, tempora, praesentium sunt deserunt voluptatibus natus magni suscipit optio veritatis sequi possimus vero.</p>
+            <p>
+                <a href="https://github.com/Mugure-Inez/jojo-the-cat"></a>
+                This project was a simple webpage for Jojo my big, black and white cat. Jojo is a such a joy to be around and this webpage should show how special he is. 
+            </p>
+
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores atque amet esse totam praesentium repudiandae aperiam. Quas, tempora, praesentium sunt deserunt voluptatibus natus magni suscipit optio veritatis sequi possimus vero.</p>
+
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores atque amet esse totam praesentium repudiandae aperiam. Quas, tempora, praesentium sunt deserunt voluptatibus natus magni suscipit optio veritatis sequi possimus vero.</p>
         </div>
     </section>
