update changes made to funfacts

--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
     </section>
 
     <section class="section-3">
-        <h2 class="c-blue">Fun fact</h2>
+        <h2 class="c-black">Fun facts</h2>
         <div class="hobbies">
+        <p><img src="../images/FB_IMG_1612903286548.jpg" width="350px" height="250px"></p>
         <p><strong>Girls who ride, are some of the most close-knit, foxy, and loyal ladies around and there’s no debating that.</strong> Back in the dark days, women weren't able to ride a motorcycle or get their license. I own multiple rides, and they aren’t just garage ornaments, either. I had to have a motorcycle. My father owned an Indian motorcycle, so he really couldn’t say anything when I wanted one of my own. Riding and music are my life, and I get to do both. Well, I guess you can say I’m lucky enough to be living the dream!.</p>
+        <p><img src="" alt=""></p>
         </div>
     </section>
 
