brief updates on my portfolio

--- a/index.html
+++ b/index.html
@@ -28,19 +28,16 @@
     <section class="section-3">
         <h2 class="c-black">Fun facts</h2>
         <div class="hobbies">
-        <p><img src="../images/FB_IMG_1612903286548.jpg" width="350px" height="250px"></p>
+        <p><strong>Adventurous is the New Pretty.</strong>I love photography and the ability to capture life especially the unimaginable moments.<img src="../images/FB_IMG_1612903286548.jpg" width="300px" height="200px"></p>
         <p><strong>Girls who ride, are some of the most close-knit, foxy, and loyal ladies around and there’s no debating that.</strong> Back in the dark days, women weren't able to ride a motorcycle or get their license. I own multiple rides, and they aren’t just garage ornaments, either. I had to have a motorcycle. My father owned an Indian motorcycle, so he really couldn’t say anything when I wanted one of my own. Riding and music are my life, and I get to do both. Well, I guess you can say I’m lucky enough to be living the dream!.</p>
-        <p><img src="" alt=""></p>
+        <p>Computers are my new bestfriends. Spending time and getting to learn so many new things is cool and very fun.<img src="../images/coding-cartoon-image.jpeg" width="300px" height="200px"></p>
         </div>
     </section>
 
     <section class="section-4">
         <h2 class="c-black">Projects</h2>
         <div class="projects">
-            <p>
-                <a href="https://github.com/Mugure-Inez/jojo-the-cat"></a>
-                This project was a simple webpage for Jojo my big, black and white cat. Jojo is a such a joy to be around and this webpage should show how special he is. 
-            </p>
+            <p>This project was a simple webpage for Jojo my big, black and white cat. Jojo is a such a joy to be around and this webpage should show how special he is. This project is compiles using HTML and CSS <a href="https://github.com/Mugure-Inez/jojo-the-cat"></a></p>
 
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores atque amet esse totam praesentium repudiandae aperiam. Quas, tempora, praesentium sunt deserunt voluptatibus natus magni suscipit optio veritatis sequi possimus vero.</p>
 
