final touches on IP 1

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         <div class="projects">
             <p>This project was a simple webpage for Jojo my big, black and white cat. Jojo is a such a joy to be around and this webpage should show how special he is. This project is compiles using HTML and CSS <a href="https://github.com/Mugure-Inez/jojo-the-cat"></a></p>
 
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores atque amet esse totam praesentium repudiandae aperiam. Quas, tempora, praesentium sunt deserunt voluptatibus natus magni suscipit optio veritatis sequi possimus vero.</p>
+            <p>This project was a simple Tuesday coursework practice webpage. The goal was to practice HTML and CSS a little more. This project is compiles using HTML and CSS </p>
 
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores atque amet esse totam praesentium repudiandae aperiam. Quas, tempora, praesentium sunt deserunt voluptatibus natus magni suscipit optio veritatis sequi possimus vero.</p>
+            <p>This project was a simple Wednesday practice webpage to quickly practice the learned coursework. This project is compiles using HTML and CSS </p>
         </div>
     </section>
 </body>
